--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-2">
         <span class="badge badge-success" id="score">0</span>
         <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-sm-5">
+            <div class="col-sm-5 panel" id="comPanel">
                 <div class="card">
                     <div class="card-body d-flex align-items-center justify-content-center">
                         <img class="mainImg image-fluid" id="comImg" src="./src/IMG/paper1.png" />
@@ -31,11 +31,10 @@
                             data-target="#staticBackdrop">
                             Pause
                         </button>
-
                         <!-- Modal -->
                         <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false"
                             tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
+                            <div class="modal-dialog" id="pauseModal">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="staticBackdropLabel">
@@ -59,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5 panel">
                 <div class="card">
                     <div class="card-body d-flex align-items-center justify-content-center">
                         <img class="mainImg image-fluid " id="userImg" src="./src/IMG/paper2.png" />
